# simplest_rpc

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
src/lib/: rpc_client.rs  rpc_message.capnp  rpc_message_util.rs
