[package]
name = "playground"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
# jemallocator = "0.5.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
